Fix bug in z-index values

--- a/assets/base/_general.scss
+++ b/assets/base/_general.scss
@@ -14,7 +14,6 @@ header {
     width: 40px;
     cursor: pointer;
   }
-  z-index: 1;
   position: fixed;
   top: 0;
   background-color: white;
